# css-autocompleter

./: .envrc  .gitignore  .prettierignore  Cargo.toml  GOALS.md  Makefile  README.md  flake.nix  index.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json  cyan-cameras-share.md  cyan-points-matter.md  fifty-cars-joke.md  happy-experts-boil.md  itchy-ads-remember.md  khaki-pots-fry.md  kind-eagles-look.md  little-windows-ring.md  nice-humans-hug.md  poor-dodos-double.md  rare-dingos-begin.md  rotten-zoos-drum.md  sharp-avocados-remember.md  shy-coins-unite.md  silver-seas-attack.md  smart-coats-repair.md  tame-cows-raise.md  tiny-carrots-dream.md  weak-kiwis-repeat.md  wet-lizards-hang.md
.github/workflows/: CI.yml  archived-ci.yml.disabled  ci.yml  release.yml
__test__/: index.spec.mjs
autocompletion-engine/: .gitignore  Cargo.toml  index.js  justfile  package.json  pnpm-lock.yaml
autocompletion-engine/.github/workflows/: CI.yml
autocompletion-engine/__test__/: index.spec.mjs  test.atom.io.css
autocompletion-engine/crates/core/: Cargo.toml
autocompletion-engine/crates/core/__test__/: another_file_with_same_classname.css  basic.css  basic2.css  malformed.css  no_classnames.css
autocompletion-engine/crates/core/benches/: get_completions.rs
autocompletion-engine/crates/core/src/: parser.rs
autocompletion-engine/crates/node/: Cargo.toml  index.d.ts  package.json
autocompletion-engine/crates/node/__test__/: index.spec.mjs  test.atom.io.css
autocompletion-engine/crates/node/npm/android-arm64/: README.md
autocompletion-engine/crates/node/npm/darwin-arm64/: README.md  package.json
autocompletion-engine/crates/node/npm/darwin-universal/: README.md  package.json
autocompletion-engine/crates/node/npm/darwin-x64/: README.md  package.json
autocompletion-engine/crates/node/npm/freebsd-x64/: README.md
autocompletion-engine/crates/node/npm/linux-arm64-gnu/: README.md  package.json
autocompletion-engine/crates/node/npm/linux-arm64-musl/: package.json
autocompletion-engine/crates/node/npm/linux-x64-gnu/: package.json
autocompletion-engine/crates/node/npm/linux-x64-musl/: README.md  package.json
autocompletion-engine/crates/node/npm/win32-arm64-msvc/: package.json
autocompletion-engine/crates/node/src/: lib.rs
autocompletion-engine/npm/android-arm-eabi/: README.md  package.json
autocompletion-engine/npm/android-arm64/: README.md  package.json
autocompletion-engine/npm/darwin-arm64/: README.md  package.json
autocompletion-engine/npm/darwin-universal/: README.md  package.json
autocompletion-engine/npm/freebsd-x64/: package.json
autocompletion-engine/npm/linux-arm-gnueabihf/: README.md  package.json
autocompletion-engine/npm/linux-arm64-gnu/: README.md  package.json
autocompletion-engine/npm/linux-arm64-musl/: README.md  package.json
autocompletion-engine/npm/linux-x64-gnu/: README.md  package.json
autocompletion-engine/npm/linux-x64-musl/: README.md  package.json
autocompletion-engine/npm/win32-arm64-msvc/: README.md  package.json
autocompletion-engine/npm/win32-ia32-msvc/: README.md  package.json
autocompletion-engine/npm/win32-x64-msvc/: README.md  package.json
autocompletion-engine/src/: atom.io.css  lib.rs
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-universal/: package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: lib.rs  main.rs
vscode-extension/: .gitignore  .prettierrc  .vscodeignore  .yarnrc.yml  CHANGELOG.md  GOALS.md  LICENSE  Makefile  README.md  esbuild.js  helper.sh  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/suite/: extension.test.ts
