[package]
name = "autocompletion-engine"
version = "0.1.0"
authors = ["Marty Penner <martypenner@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde_json = "1.0.96"
tree-sitter = "0.20.10"
# Pin to main at the time of commit
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css.git", rev = "769203d0f9abe1a9a691ac2b9fe4bb4397a73c51" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
# Set this to true if you need to debug release builds
debug = false
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# From NAPI-rs
lto = true

[profile.bench]
debug = true
