[package]
name = "autocompletion-engine"
version = "0.1.0"
authors = ["Marty Penner <martypenner@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde_json = "1.0.96"
tree-sitter = "0.20.10"
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css.git", version = "0.19.0" }

[build-dependencies]
napi-build = "2.0.1"
