[package]
name = "autocompletion-engine-core"
version = "0.1.0"
authors = ["Marty Penner <martypenner@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde_json = "1.0.102"
tree-sitter = "0.20.10"
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css.git", version = "0.19.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ['html_reports'] }

[[bench]]
name = "get_completions"
harness = false
