[package]
name = "autocompletion-engine-core"
version = "0.1.0"
authors = ["Marty Penner <martypenner@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
log = "0.4.19"
serde_json = "1.0.104"
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tree-sitter = "0.20.10"
tree-sitter-css = { git = "https://github.com/tree-sitter/tree-sitter-css.git", rev = "5f2c94b897601b4029fedcce7db4c6d76ce8a128" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ['html_reports'] }

[[bench]]
name = "get_completions"
harness = false
